# suclepy

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
suclepy/: __init__.py  main.py
suclepy/cli/: suclepy_cli.py
suclepy/config/: __init__.py  settings.py
suclepy/core/: __init__.py  analyzer.py  cleaner.py  reporter.py  role_infer.py  utils.py  validator.py
suclepy/data/: example_dirty.csv
suclepy/examples/: cleaned_data.csv  cleaned_dataset_vesrsion_1_0_1.csv  suclepy_demo.ipynb
suclepy/tests/: test_all.py  test_analyzer.py  test_cleaner.py  test_reporter.py  test_role_infer.py
