[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "suclepy"
version = "1.0.0"
description = "SUCLEPY — Smart Universal Cleaner Library for Python"
authors = [
    { name="Subodh Kumar Yadav", email="subodhkumary933@gmail.com" }
]
readme = "README.md"
license = { text="MIT" }
keywords = ["data-cleaning", "data-validation", "data-analysis", "python"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.8"

dependencies = [
    "pandas>=2.0",
    "numpy>=1.25",
    "tabulate>=0.9"
]

[project.urls]
Homepage = "https://github.com/subodhkryadav/suclepy"
Source = "https://github.com/subodhkryadav/suclepy"
Tracker = "https://github.com/subodhkryadav/suclepy/issues"
